exports[`transform should inline code 1`] = `
<div>
  <p>
    This is 
    <code>
      code!
    </code>
  </p>
</div>
`;

exports[`transform should transform blockquotes 1`] = `
<div>
  <blockquote>
    <p>
      some quote
    </p>
  </blockquote>
</div>
`;

exports[`transform should transform emphasis 1`] = `
<div>
  <p>
    <em>
      Italics.
    </em>
     
    <strong>
      Bold!
    </strong>
  </p>
</div>
`;

exports[`transform should transform headings 1`] = `
<div>
  <h1>
    Hello, world!
  </h1>
  <h2>
    This is a test.
  </h2>
</div>
`;

exports[`transform should transform horizontal rules 1`] = `
<div>
  <hr />
</div>
`;

exports[`transform should transform images 1`] = `
<div>
  <p>
    <img
      alt="test"
      src="test.png" />
  </p>
</div>
`;

exports[`transform should transform links 1`] = `
<div>
  <p>
    <a
      href="https://github.com">
      Link
    </a>
  </p>
</div>
`;

exports[`transform should transform paragraphs 1`] = `
<div>
  <p>
    First.
  </p>
  <p>
    Second.
  </p>
</div>
`;

exports[`transform should transform tables 1`] = `
<div>
  <table>
    <thead>
      <tr>
        <th
          style={
            Object {
              "textAlign": "right",
            }
          }>
          Col A
        </th>
        <th
          style={
            Object {
              "textAlign": "right",
            }
          }>
          Col B
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td
          style={
            Object {
              "textAlign": "right",
            }
          }>
          aaa
        </td>
        <td
          style={
            Object {
              "textAlign": "right",
            }
          }>
          bbb
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
